update reward and init velocity for hover task

--- a/quad_controller_rl/notebooks/RL-Quadcopter.ipynb
+++ b/quad_controller_rl/notebooks/RL-Quadcopter.ipynb
@@ -187,7 +187,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -351,7 +353,9 @@
     "**Q**: Discuss your implementation below briefly, using the same questions as before to guide you.\n",
     "\n",
     "**A**:\n",
-    "- I use the same algorithm with these tasks above.\n",
+    "- I use the same algorithm DQN with these tasks above.\n",
+    "- The hyperparameters that I use in DQN was `gamma=0.9`, `lr=0.001`, `epsilon_decay=0.996`, `epsilon minimum = 0.01`, `replay memory size = 10k`, `batch size = 64`\n",
+    "- I use 3 fully connected layers with the first layer have a size of 32, the second layer have a size of 64 using relu activation, and the last layer equal to the size of the discretized actions which is output.\n",
     "\n",
     "### Plot episode rewards\n",
     "\n",
